# hazumu

./: .dockerignore  .gitignore  .mise.toml  AGENTS.md  LICENSE  README.md
.github/: renovate.json
.github/workflows/: ci.yaml  docker.yaml  docs.yaml  gateway.yaml  mcp.yaml
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion.md
app/gateway/: package.json  pnpm-lock.yaml
apps/ml-gateway/: .gitignore  Dockerfile  biome.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.js
apps/ml-gateway/prisma/: README.md  schema.prisma
apps/ml-gateway/prisma/migrations/20241224_init/: migration.sql
apps/ml-gateway/src/: db.ts  index.test.ts  index.ts  mcp-client.test.ts  mcp-client.ts  mcp-tools-adapter.ts  ollama.ts
apps/ml-gateway/src/routes/: chat.test.ts  chat.ts
apps/ml-gateway/src/schemas/: chat.ts
apps/robot-mcp/: pyproject.toml  server_led.py  test_server_led.py
docs/: development_guide.md  overview.md
docs/gateway/: README.md  config.md  database-logging.md  endpoints.md  operations.md
docs/infra/: README.md  architecture.md  ports.md  setup.md
docs/pi/: setup.md
infra/: README.md
infra/docker/: compose.yml
infra/monitor/grafana/provisioning/dashboards/: dashboard-provider.yml  ollama-dashboard.json
infra/monitor/prometheus/: blackbox.yml  prometheus.yml
infra/pi/: deploy.sh  setup.sh
