[project]
name = "robot-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gpiozero>=2.0.1",
    "httpx>=0.28.1",
    "mcp[cli]>=1.25.0",
    "rpi-lgpio>=0.6",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
